# ChangeLog for dev-python/jinja
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/jinja/ChangeLog,v 1.121 2014/08/19 06:58:20 djc Exp $

  19 Aug 2014; Dirkjan Ochtman <djc@gentoo.org> -jinja-2.6-r100.ebuild,
  -jinja-2.7.ebuild:
  Cleanup vulnerable Jinja versions for bug 497690

  09 Aug 2014; Agostino Sarubbo <ago@gentoo.org> jinja-2.7.3.ebuild:
  Stable for ppc64, wrt bug #497690

  08 Aug 2014; Agostino Sarubbo <ago@gentoo.org> jinja-2.7.3.ebuild:
  Stable for ppc, wrt bug #497690

  02 Aug 2014; Raúl Porcel <armin76@gentoo.org> jinja-2.7.3.ebuild:
  sparc stable wrt #497690

  02 Aug 2014; Agostino Sarubbo <ago@gentoo.org> jinja-2.7.3.ebuild:
  Stable for x86, wrt bug #497690

  02 Aug 2014; Agostino Sarubbo <ago@gentoo.org> jinja-2.7.3.ebuild:
  Stable for amd64, wrt bug #497690

  28 Jul 2014; Mikle Kolyada <zlogene@gentoo.org> jinja-2.7.3.ebuild:
  ia64 stable wrt bug #497690

  27 Jul 2014; Markus Meier <maekke@gentoo.org> jinja-2.7.3.ebuild:
  arm stable, bug #497690

  23 Jul 2014; Tobias Klausmann <klausman@gentoo.org> jinja-2.7.3.ebuild:
  Stable on alpha, bug #497690

  23 Jul 2014; Patrick Lauer <patrick@gentoo.org> metadata.xml:
  Remove unneded useflag descriptions from metadata.xml

  22 Jul 2014; Jeroen Roovers <jer@gentoo.org> jinja-2.7.3.ebuild:
  Stable for HPPA (bug #497690).

  21 Jul 2014; Dirkjan Ochtman <djc@gentoo.org> -jinja-2.6-r1.ebuild,
  -jinja-2.6-r2.ebuild, -jinja-2.6.ebuild, -jinja-2.7.1.ebuild,
  -jinja-2.7.2.ebuild:
  Remove old versions

*jinja-2.7.3 (26 Jun 2014)

  26 Jun 2014; Patrick McLean <chutzpah@gentoo.org> +jinja-2.7.3.ebuild:
  Version bump, fix for CVE-2014-0012.

*jinja-2.7.2 (18 May 2014)

  18 May 2014; Ian Delaney <idella4@gentoo.org> +jinja-2.7.2.ebuild:
  bump; drop py2.6 pypy2_0 support, minor tidy

  01 Apr 2014; Mike Gilbert <floppym@gentoo.org> jinja-2.7.1.ebuild:
  Add python3.4.
