@@ -10,23 +10,23 @@ DIST Pillow-2.4.0.zip 6519873 SHA256 2865c68b3a5638466b1837bf4a67c447e0cfdf74633
 DIST Pillow-2.5.3.zip 6873222 SHA256 62ff6c6cb88d4a1d6e856315b1691186b06cb923f18fde86d6abac9eeb9096d1 SHA512 09d8cb9391f1627e01898eef15109ddd1deecc0bcd342f35e85b7cc0eacc61952ed8c297c460b858815d05ed9ab65c3674ef1c4b73d583ff37fd7eed7368af35 WHIRLPOOL 99f8bd559eaad619db872bb29673abd0073dc5e3f4f85056e51a4e59c5e85193de10934e4b725ef9b40af535c8dac7128debf441982fa3a2355411944d495527
 EBUILD pillow-2.3.1.ebuild 2504 SHA256 77914decba56e3f86c42249cebf24bb66519d57e3975e95f7128a81a4ae88a64 SHA512 0d2c301e077e61d6f9c984707437c56d303cb193b762f5197ea458f2d8647577b20c226ce2f50c967304639a7a5ee5efd535bb85dae2fbc0aae1819462e82708 WHIRLPOOL d9b3f72c3bab464ff1a32e4d6353a2b490670ee9ae2853e66da4d500b86f87d362014fd37ce7e9f98649efceb41b647e5413e26941465707cc0585d6661e8f42
 EBUILD pillow-2.4.0.ebuild 2630 SHA256 20c628292eb49d80b1f3b98fdaf5723668462871a2235a3b75776360fd140319 SHA512 c503bfc7ad4653ac3df32f14ede41a373ed5f5c60728de184472567f3241d3c73d091a656eb07c1bf99bb3cc58c7d8db6ddaaa1a8f1bc0b9ffff088b52943d29 WHIRLPOOL f462383d23f18d3ddb527c57340e549678950635dd659953227755fbc0245305e92e491485a9b962bb327f5a77e232436fc3af21f34ca62837ef3c935f68f6a9
-EBUILD pillow-2.5.3.ebuild 2638 SHA256 1caad81368b59e3c847d628465564225f120870e545590900c6c6fc2bf645aad SHA512 16a904f6bdbca10515db42750da1307c01bfe09c6b2c028112461694c06cfb103faa511599dc30c9056f75b84499af09806d0df75bdc5ee4a54a2f371335bead WHIRLPOOL 29c0f15624d98373bbc6e070d643bf710b6cf0006561b1758839f86e584aa7734f84746902433f5fedbb9b1d7b3aaa6a4a5c8e1f3c3447ff961307dfebc87a5b
-MISC ChangeLog 4542 SHA256 7ab9d132f2380fa0b91770ab8951c416ae1224f65f01f127c9477f2a959f603c SHA512 ecb07441c8fb79cb5f81813442fd8f28cb855f278943d2aeafa019fbae8630ac4114faa228147f534138a18df0d6af07da25400033709c7d43e6bd57fb3d0568 WHIRLPOOL e1640aac43616985ee780152d2a3f2ca6a42409485815d70b9a122d0b73fda0278f5794fe6f0b3cd607eb5b7453d65e3c5bdc96bf8fc274e0fc05b4f09af47cf
+EBUILD pillow-2.5.3.ebuild 2642 SHA256 7a1bce227fb99d6036f2c53c2d7aa50175f0fddd5f3df9222678da23541b76b8 SHA512 93ce70d3761e7b6433e37890b648d0ea802391bf96aa0fa047bab0bc62ad727f3cb5eb2eead066d8abecc837a35c74c7039431a325cf3489e0e0e6f0963081e1 WHIRLPOOL bebe51ac457ace70c6bdd89ab0815c093c2c1e53dc61fd0a87b4899eab34cedc8fd82d5f73070f02fd3920ff94573e9ecd52f77331ba533ce3bb6d9a35d6f253
+MISC ChangeLog 4644 SHA256 bc7009a034c885716b34a4b51f10ae39504c1c23a6db69aeda1a6cb6064680f9 SHA512 28a62eede6e12485c88f5881125407e8712a8ec62d85301c905183bc9d70dfae92b2734197a51f0dd1c690c4ef8b2580d8a9d0b547f77ffd1f7c688b09534beb WHIRLPOOL b7052211c3bf52130a1ee3106970b76d3672224e940788933f824bcf642684dff29dcb02f6e7a9fd30762ef0bdc699a4b245e92f2fc94eb1027c610759f3f191
 MISC metadata.xml 240 SHA256 c074ff55f0a36445f041979a1f7ed66e1993313aad3d5a5e4f202dc842de7831 SHA512 837f01165c567829d1e8fab358907f8239042976a9f44a6cd0a7fd37070a8b5c275a2ddf836d9967c948c049927264eac917aae6093300258db319d5051c9769 WHIRLPOOL 4d7615634e94a9dd43de3945018123529c92576b4f0298500fa728204540f7ae1e8e618fa838ae34852f336a28771fc89a7bb3b18a7819ae3da061f1afdab1b5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJT8vrdAAoJEJ+WuSkwOAOBXqoQAMRcocQaTimaq9CUSrht6B2f
-BLZRhTCtLSiqRC3vecbHNQN9r7SLpnfHml7Zzt3bBpRo8muueJeVcG2SkI0+eGJu
-FJwsgNWtXbgvG8Sjb2chheRE83jOh2ZjS9GX5OycMgX4FguwUZRyxVlIUOoGqpSF
-ClWBg9QOEAdjRjceL9BB5gmOccrke0PRrMDgFyDtYu/DOpr0atvNyKxCacJXNn7R
-CTQ8YOCafYa2YQMkNEBuI+ylhdMc9+TcagXBNYwafuSSHKRbVtzFcesqivB3z/QY
-LGEdWOrXvmnnVir+VwccOPBVNjL8vLMUKwsIyUeOyQCGQtoF/adMAwr9b0IYtT++
-ZaOkYtbKpGmP7N9TtdbsX7W5/ZKlXn0k6qR1gOT2/YZYF3r001cfA5Ri1wxpNA0y
-nDuTHZh3+CF+lty/YRgvBMTa4QANl4W1tWGB9nK/QOvJjrWIO+CwRLaGhFC7cqL0
-UPHZUkV5q9+o6g5fFgEeQZ9OPGB4oryH4inCWAQU1byDoT9VIXbID9ByiDKaDWW3
-MQXfFoDohGYFZ6kNJdUym9ujJw2JodgAKw6BiGhGZSDq+87Urk0dsIxAls3XChM7
-GRtA22PbMVJBw7RWk+HTpFTovmhywRCien4beajg0t4n6ioEglrWzB1IgrS1Ycx6
-jnFCK4e53yn3TzRwpqr9
-=RchQ
+iQIcBAEBCAAGBQJT84KdAAoJEJ+WuSkwOAOB6+cP/RxnEcLpb+7H0yPFyuYcHoTE
+AXcbKu4JWzkuYSD0jp00D2B505KoBpufW+QnDX6nlbfYWnHTMVmrvV6PtofCaiiC
+3OTMAQOfEZWfCSQNGhWQqi8LnsIKeCj8WYijL2Si3Z7t+GwLW3rEatFNeTPLXei+
+wUu6paNxcZIrMCasRURwlm1O7scTvTY8YRHeFp6gG4IKHKkuBcwmN4wExhPLUUuS
+jV/CehUJZxsBd+hYQtyUR+Ur1WHa+ou5zyYxx0Ia9l4/o/zP3VEyhfj3gAHg9d+g
+mOeUDnpQQXmp6RixDDZ816tbeE30VTdI5efLr9slYyDFU6IIeVS54OLDVF9+8AJd
+kiYrj2AZ3D+7I0+fM+XgD77pBDwpO1JDPeUeRY6QSjxW4dPBwDe/6Drn0SHJCafG
+xjqr4YQ25xk+8hqSs4WYZAy28SKNnfERTgZxHHxPzq3dCGKHX4YfnJF9eXdt6Zo5
+2vNK+JhOGxQLg3j1fynaSq5o4o3rM6W4a4tmPk9QNXnrUP4hbw8R84tQQVzA/Y9r
+sv18gCjV1CXTNXEfHiyB4qIeNkRNYw/OE/eCQpuI3TJcS3Ciu2TkVF7CagzFNcVa
+TOCU4GxkPSrcDIwIT/PdZqxNKERz5h5WSdh3Dc/wUIIieT9XGYYEO4WpERoFqbZ3
+okD/XUS52ypSw0StmsPq
+=3P1e
 -----END PGP SIGNATURE-----
