@@ -11,4 +11,4 @@ REQUIRED_USE=test? ( jpeg ) || ( python_targets_python2_7 python_targets_python3
 SLOT=0
 SRC_URI=mirror://pypi/P/Pillow/Pillow-2.5.3.zip
 _eclasses_=distutils-r1	d48d51c220f1678179fc4ab13b534ec1	eutils	06133990e861be0fe60c2b428fd025d9	multibuild	46527a4656956da3d58acff72c9b59b1	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-r1	75e5c82b55dcb208a0a8f4ab8847e731	python-utils-r1	8c66c6dabd0295878b68b40dbd0b087b	toolchain-funcs	0f1760274637a138b99bb649202ea402
-_md5_=bd58d7898fcf15676858123fe8982fed
+_md5_=ae2ee327ff07687cd56ea775b8c100bb
